--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/micro.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>The Cuban Show</title>
   </head>
   <body>
