create delete function

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,21 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/micro.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
+    <noscript>https://fonts.google.com/</noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>The Cuban Show</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <style>
+    .material-symbols-rounded {
+      font-variation-settings:
+      'FILL' 1,
+      'wght' 700,
+      'GRAD' 200,
+      'opsz' 20
+    }
+    </style>
 </html>
