--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/micro.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="A Vladimir Aguilar ft Victor Griñán Production"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/micro.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./site.webmanifest.json">
     -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest.json">
+    
 
     <noscript>https://fonts.google.com/</noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    <meta name="viewport" content="initial-scale=1, width=device-width" />
