--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5610388120909625"
      crossorigin="anonymous"></script>
-     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script> 
+     <!--<script>(adsbygoogle = window.adsbygoogle || []).push({});</script> -->
     <noscript>https://fonts.google.com/</noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>The Cuban Show</title>
