--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!--
+      <!--
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/micro.png" />
     <link rel="manifest" href="./site.webmanifest.json">
     -->
@@ -19,12 +19,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     
+
+        <!--
+      Addsense:
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5610388120909625"
+     crossorigin="anonymous"></script> -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878852947463746"
      crossorigin="anonymous"></script>
 
 
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5610388120909625"
-     crossorigin="anonymous"></script>
+
 
     <noscript>https://fonts.google.com/</noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    <meta name="viewport" content="initial-scale=1, width=device-width" />
