--- a/public/index.html
+++ b/public/index.html
@@ -11,27 +11,42 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <!--
+    <!--
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/micro.png" />
     <link rel="manifest" href="./site.webmanifest.json">
     -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    
-
-        <!--
-      Addsense:
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5610388120909625"
-     crossorigin="anonymous"></script> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!--
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878852947463746"
+      crossorigin="anonymous"
+    ></script>
+ 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878852947463746"
      crossorigin="anonymous"></script>
-
-
-
+         -->
+    <!-- The Cuban Show app -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-6878852947463746"
+      data-ad-slot="4064165916"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
     <noscript>https://fonts.google.com/</noscript>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>The Cuban Show</title>
   </head>
   <body>
@@ -39,11 +54,7 @@
   </body>
   <style>
     .material-symbols-rounded {
-      font-variation-settings:
-      'FILL' 1,
-      'wght' 700,
-      'GRAD' 200,
-      'opsz' 20
+      font-variation-settings: "FILL" 1, "wght" 700, "GRAD" 200, "opsz" 20;
     }
-    </style>
+  </style>
 </html>
